More sections added